src/ui/features/execution/snapshots/terraleph__ui__features__execution__render__tests__preview_80x24_plan-progress.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---

 Terraleph | main

 ┌Reading─────────────────────────────────────────────────────────────────────┐
 │| Reading plan...                                                           │
 │Waiting 2s    Follow: On                                                    │
 │Elapsed 2.0s                                                                │
 │reading output                                                              │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │────────────────────────────────────────────────────────────────────────────│
 └────────────────────────────────────────────────────────────────────────────┘
 Ctrl-C cancel | End follow latest
