src/ui/features/execution/snapshots/terraleph__ui__features__execution__render__tests__ux12r_120x40_apply-stopping.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---




 Terraleph | repo                                                                                 workspace: loading...

 ┌Applying────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │Stopping...    Completed: 0/0    Elapsed: 0.0s                                                                      │
 │Failed: 0    Incomplete: 0    Skipped: 0                                                                            │
 │Changes may already be applied.                                                                                     │
 │┌Targets *─────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││> All logs                                                                                                        ││
 ││  Resource  Status     Action        Elapsed                                                                      ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 │┌Logs: All logs────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││xxxxxxxxxxxxxxxx                                                                                                  ││
 ││xxxxxxxxxxxxxxxx                                                                                                  ││
 ││xxxxxxxxxxxxxxxx                                                                                                  ││
 ││xxxxxxxxxxxxxxxx                                                                                                  ││
 ││xxxxxxxxxxxxxxxx                                                                                                  ││
 ││xxxxxxxxxxxxxxxx                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 ││                                                                                                                  ││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl-C cancel | Tab focus | End follow latest
