src/ui/features/execution/snapshots/terraleph__ui__features__execution__render__tests__ux12r_160x60_apply-logs.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---






 Terraleph | repo                                                                                                                         workspace: loading...

 ┌Applying────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │Applying...    Completed: 0/0    Elapsed: 0.0s                                                                                                              │
 │Failed: 0    Incomplete: 0    Skipped: 0                                                                                                                    │
 │┌Targets───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││> All logs                                                                                                                                                ││
 ││  Resource                  Status     Action        Elapsed                                                                                              ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 │┌Logs: All logs────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││xxxxxxxxxxxxxxxx                                                                                                                                          ││
 ││xxxxxxxxxxxxxxxx                                                                                                                                          ││
 ││xxxxxxxxxxxxxxxx                                                                                                                                          ││
 ││xxxxxxxxxxxxxxxx                                                                                                                                          ││
 ││xxxxxxxxxxxxxxxx                                                                                                                                          ││
 ││xxxxxxxxxxxxxxxx                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl-C cancel | Tab focus | End follow latest
