src/ui/features/execution/snapshots/terraleph__ui__features__execution__render__tests__ux12r_32x9_apply-stopping.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---
Terminal too small. Resize or
press Ctrl-C to cancel.
